feat:完成阶段五以及应用日志开发
